logs/UnsafeAtomics_0.7.log
>>> 'Pkg.add("UnsafeAtomics")' log
[ Info: Installing UnsafeAtomics v0.0.1 @ Base.Pkg.Entry entry.jl:543
[ Info: Package database updated @ Base.Pkg.Entry entry.jl:32
┌ Info: METADATA is out-of-date — you may not have the latest version of UnsafeAtomics
│ Use `Pkg.update()` to get the latest versions of your packages
└ @ Base.Pkg.Entry entry.jl:74

>>> 'Pkg.test("UnsafeAtomics")' log
Julia Version 0.7.0-DEV.3309
Commit b96097b66f (2018-01-07 00:26 UTC)
Platform Info:
  OS: Linux (x86_64-pc-linux-gnu)
      Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-135-generic #184-Ubuntu SMP Wed Oct 18 11:55:51 UTC 2017 x86_64 x86_64
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
              speed         user         nice          sys         idle          irq
       #1  3499 MHz    4350998 s        112 s     210307 s     927292 s         32 s
       #2  3499 MHz     744166 s        101 s      74797 s    5611125 s          0 s
       
  Memory: 2.93927001953125 GB (797.1953125 MB free)
  Uptime: 65192.0 sec
  Load Avg:  0.94970703125  0.990234375  0.98486328125
  WORD_SIZE: 64
  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.9.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-8-openjdk-amd64
  HOME = /home/vagrant
Packages:
  Package Directory: /home/vagrant/.julia/v0.7
  Package Status:
2 required packages:
 - JSON                          0.16.3
 - UnsafeAtomics                 0.0.1
3 additional packages:
 - Compat                        0.43.0
 - Nullables                     0.0.2
 - tmpKrnEES                     0.0.0-             non-repo (unregistered)
[ Info: Testing UnsafeAtomics @ Base.Pkg.Entry entry.jl:723
WARNING: Base.Test is deprecated, run `using Test` instead.
  likely near /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl:3
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:46
└ @ Core UnsafeAtomics.jl:46
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:47
└ @ Core UnsafeAtomics.jl:47
┌ Warning: Constructors no longer fall back to `convert`. A constructor `VersionNumber(::VersionNumber)` should be defined instead.
│   caller = top-level scope at UnsafeAtomics.jl:49
└ @ Core UnsafeAtomics.jl:49
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_cas!{T <: AtomicTypes}(x::Array{T}, idx::Integer, cmp::T, new::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:122.
│ Use `unsafe_atomic_cas!(x::Array{T}, idx::Integer, cmp::T, new::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:122
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_xchg!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_xchg!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_add!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_add!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_sub!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_sub!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_and!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_and!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_nand!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_nand!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_or!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_or!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_xor!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_xor!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_max!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_max!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
┌ Warning: Deprecated syntax `parametric method syntax unsafe_atomic_min!{T <: AtomicTypes}(x::Array{T}, idx::Integer, val::T)` around /home/vagrant/.julia/v0.7/UnsafeAtomics/src/UnsafeAtomics.jl:127.
│ Use `unsafe_atomic_min!(x::Array{T}, idx::Integer, val::T) where T <: AtomicTypes` instead.
└ @ nothing UnsafeAtomics.jl:127
ERROR: LoadError: error compiling test_threaded_loop_and_atomic_add: error compiling #8#threadsfor_fun: Failed to parse LLVM Assembly: 
julia: llvmcall:3:26: error: '%0' defined with type 'i64'
%rv = atomicrmw add i64* %0, i64 %1 acq_rel
                         ^

Stacktrace:
 [1] top-level scope
 [2] include at ./boot.jl:295 [inlined]
 [3] include_relative(::Module, ::String) at ./loading.jl:521
 [4] include(::Module, ::String) at ./sysimg.jl:26
 [5] process_options(::Base.JLOptions) at ./client.jl:324
 [6] _start() at ./client.jl:375
in expression starting at /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl:33
┌ Error: ------------------------------------------------------------
│ # Testing failed for UnsafeAtomics
│   exception = ErrorException("failed process: Process(`/home/vagrant/julia/bin/julia -Cnative -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --code-coverage=none --color=no --compiled-modules=yes --check-bounds=yes --warn-overwrite=yes --startup-file=yes /home/vagrant/.julia/v0.7/UnsafeAtomics/test/runtests.jl`, ProcessExited(1)) [1]")
└ @ Base.Pkg.Entry entry.jl:739
ERROR: UnsafeAtomics had test errors

>>> End of log
